added meta tags

--- a/src/style.css
+++ b/src/style.css
@@ -1,7 +1,7 @@
 hhtml {
   font-size: 16px;
   margin-top: 10px;
-  background-color: #cfb69a;
+  background-color: white
 }
 body {
   backgrou6pxnd-color: #fff8f0;
