--- a/src/style.css
+++ b/src/style.css
@@ -34,7 +34,7 @@ h2 {
 #hero-section {
   display: flex;
   margin: 0 auto 48px auto;
-  max-width: 1000px;
+  max-width: 600pxpx;
 }
 #hero-text {
   width: 50%;
@@ -86,17 +86,17 @@ h2 {
 }
 .section-heading {
   text-align: center;
-  max-width: 500px;
+  max-width: 300px;
   margin: 0 auto;
 }
 .section-subtitle {
   text-align: center;
   margin: 8px auto 48px auto;
-  max-width: 600px;
+  max-width: 300px;
 }
 #pricing-boxes {
   display: flex;
-  max-width: 1000px;
+  max-width: 600px;
   margin: 0 auto;
 }
 .pricing-boxing {
